# Physical-AI-and-Humanoid-Robotics

./: README.md
.specify/memory/: constitution.md
backend/: agent.py  main.py  pyproject.toml  requirements.txt
frontend/: .env  docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/docs/: intro.md  style-guide.md  template.md
frontend/docs/part-1-foundations/: chapter-2-humanoid-robotics-overview.md  chapter-3-understanding-physical-world.md
frontend/docs/part-2-ros/: chapter-4-ros2-basics.md  chapter-5-ros2-packages.md  chapter-6-robot-description-files.md
frontend/docs/part-3-simulation/: chapter-7-gazebo-simulation-fundamentals.md  chapter-8-visualizing-in-unity.md  chapter-9-simulated-sensors.md
frontend/docs/part-4-isaac/: chapter-10-isaac-sim-overview.md  chapter-11-isaac-ros.md  chapter-12-navigation2.md
frontend/docs/part-5-vla/: chapter-13-voice-to-action.md  chapter-14-cognitive-planning-with-llms.md  chapter-15-perception-and-object-interaction.md
frontend/docs/part-6-humanoid-engineering/: chapter-16-humanoid-kinematics.md  chapter-17-locomotion-and-balance.md  chapter-18-manipulation.md
frontend/docs/part-7-capstone/: chapter-19-autonomous-humanoid-pipeline.md
frontend/src/components/: ChapterCard.js  ChapterCard.module.css  ChaptersGrid.js  ChaptersGrid.module.css  TextbookOverview.js  TextbookOverview.module.css
frontend/src/css/: custom.css
frontend/src/pages/: index.js
specs/001-textbook-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+9 files in other folders)
